@@ -982,6 +982,16 @@ UNION SELECT mytable.myid FROM mytable"
         s = union(s, s)
         self.assert_compile(s, "SELECT foo, bar UNION SELECT foo, bar UNION (SELECT foo, bar UNION SELECT foo, bar)")
         
+        s = select([column('foo'), column('bar')])
+        # ORDER BY's even though not supported by all DB's, are rendered if requested
+        self.assert_compile(union(s.order_by("foo"), s.order_by("bar")), 
+            "SELECT foo, bar ORDER BY foo UNION SELECT foo, bar ORDER BY bar"
+        )
+        # self_group() is honored
+        self.assert_compile(union(s.order_by("foo").self_group(), s.order_by("bar").limit(10).self_group()), 
+            "(SELECT foo, bar ORDER BY foo) UNION (SELECT foo, bar ORDER BY bar  LIMIT 10)"
+        )
+        
 
     @testing.uses_deprecated()
     def test_binds(self):
